2002-09-26  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (ms_excel_parse_formula) : supply handling of
	  pgts 26 & 27.  We can ignore them but they frequently wrap the
	  intersection operator, the export will be a pain in the butt.

2002-09-25  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (binary_ops) : enable intersection
	  still needs work.
	* ms-formula-write.c (ms_formula_build_pre_data) : ditt.
	(write_node) : ditto.

2002-09-15  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (const) : DateDif takes 3 arguments.

2002-09-10  Morten Welinder  <terra@diku.dk>

	* ms-escher.c: Make shade_ParamMask be within int's range by
	casting it.
	* ms-escher.c: Avoid trailing commas in enums.

2002-09-05  Jody Goldberg <jody@gnome.org>

	* ms-formula-write.c (ms_formula_write_pre_data) : remove some obvious
	  silliness

2002-09-04  Jody Goldberg <jody@gnome.org>

	* *.c : remove ifdef WITH_BONOBOization of graphs

2002-08-30  Jody Goldberg <jody@gnome.org>

	* boot.c (excel_read_metadata) : new.
	(excel_file_open) : read the doc and summary meta info streams.
	  Don't do anything with the data yet, but start the ball rolling.

2002-08-30  Morten Welinder  <terra@diku.dk>

	* ms-excel-read.c (ms_excel_read_formula): Avoid copying of
	string.
	(ms_excel_parse_formula): Ditto.

2002-08-29  Morten Welinder  <terra@diku.dk>

	* ms-excel-util.c (two_way_table_new): Take an extra arg for
	getting rid of keys.  All callers changed.

	* ms-excel-write.c (formats_init): Supply an unreffer to
	two_way_table_new.

2002-08-29  Morten Welinder  <terra@diku.dk>

	* ms-excel-write.c (free_workbook): Plug leaks.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_workbook) :
	  excel_iconv_open_for_import moved to libgsf.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_workbook) : gnm_iconv_close moved to
	  libgsf.
	* ms-excel-write.c (write_workbook) : ditto.
	* ms-summary.c (ms_summary_read) : ditto.